fix overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,14 @@ body {
   overflow-y: auto;
 }
 
+.popup-background {
+  height:100%;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(25,25,25,1) 0%, rgba(39,39,39,1) 50%, rgba(25,25,25,1) 100%);
+  background-repeat: repeat-y;
+  color: white;
+  overflow-y: visible;
+}
+
 .sticky-menu {
   position: sticky;
   top: 0;
